<resources>
    <string name="app_name">আমার হিসাব</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="Taka_zero">\u09F3 0</string>
    <string name="customer_name">নাম</string>
    <string name="phone_number">ফোন নম্বর</string>
    <string name="customer_address">ঠিকানা (বাধ্যতামূলক নয়)</string>
    <string name="cl_contactName">Siyamul Islam</string>
    <string name="cl_contactNumber">01717338996</string>
    <string name="cl_ContactPP">Contact Image</string>
    <string name="tl_title">Type</string>
    <string name="tl_date">10 March 20</string>
    <string name="tl_amount">\u09F3 0</string>
    <string name="tl_amount2">0 BDT</string>
    <string name="settings_developed_by">Developed By</string>
    <string name="settings_Developers">Siam, Eusuf, Murad</string>
    <string name="settings_Developers0">Supervised By:Shadaab Kawnain Bashir\nDeveloped By:Siam, Eusuf, Murad</string>
    <string name="denapawnaCT">দেনা-পাওনা</string>
    <string name="jomakhorocCT">জমা-খরচ</string>
    <string name="sonchoyCT">সঞ্চয়</string>
    <string name="memoroshidCT">মেমো-রশিদ</string>
    <string name="aykorCT">আয়কর</string>
    <string name="annoannoCT">অন্যান্য</string>
    <string name="ST_delete_data">ডেটা মুছুন</string>
    <string name="ST_language">ভাষা</string>
    <string name="ST_denapawnaCT">\u0020 দেনা-পাওনা</string>
    <string name="ST_jomakhorocCT">\u0020 জমা-খরচ</string>
    <string name="ST_sonchoyCT">\u0020 সঞ্চয়</string>
    <string name="ST_memoroshidCT">\u0020 মেমো-রশিদ</string>
    <string name="ST_note"><i><b>সতর্কতাঃ</b> মুছে ফেলা ডেটা পুনরায় উদ্ধার করা যাবে না!</i></string>
    <string name="alertBuilderDeleteDP_data">আপনি কি <b>দেনা-পাওনা</b> ডেটা মুছে ফেলতে চান?</string>
    <string name="alertBuilderYesDeleteDP_dataConf">সফলভাবে <b>দেনা-পাওনা</b> ডেটা মুছে ফেলা হয়েছে!</string>
    <string name="alertBuilderDeleteJK_data">আপনি কি <b>জমা-খরচ</b> ডেটা মুছে ফেলতে চান?</string>
    <string name="alertBuilderYesDeleteJK_dataConf">সফলভাবে <b>জমা-খরচ</b> ডেটা মুছে ফেলা হয়েছে!</string>
    <string name="alertBuilderDeleteSC_data">আপনি কি <b>সঞ্চয়</b> ডেটা মুছে ফেলতে চান?</string>
    <string name="alertBuilderYesDeleteSC_dataConf">সফলভাবে <b>সঞ্চয়</b> ডেটা মুছে ফেলা হয়েছে!</string>
    <string name="alertBuilderDeleteMR_data">আপনি কি <b>মেমো-রশিদ</b> ডেটা মুছে ফেলতে চান?</string>
    <string name="alertBuilderYesDeleteMR_dataConf">সফলভাবে <b>মেমো-রশিদ</b> ডেটা মুছে ফেলা হয়েছে!</string>
    <string name="dp_lenden_talika">সর্বশেষ লেনদেন</string>
    <string name="dp_khujun">খুঁজুন</string>
    <string name="dp_dp_jog_korun">পাওনাদার/দেনাদার যোগ করুন</string>
    <string name="dp_contact_theke_jog_korun">কন্টাক্ট লিষ্ট থেকে যোগ করুন</string>
    <string name="dp_dpdarName">পাওনাদার/দেনাদার</string>
    <string name="dp_title">দেনা-পাওনা</string>
    <string name="dp_mot_pabo">\u0020 মোট পাবো</string>
    <string name="dp_mot_debo">\u0020 মোট দিবো</string>
    <string name="dp_seachbox_hints">পাওনাদার/দেনাদার খুঁজুন..</string>
    <string name="dp_mid_slash">/</string>
    <string name="dp_pabo">পাবো</string>
    <string name="dp_debo">দেবো</string>
    <string name="dp_porishod">পরিশোধ!!</string>
    <string name="dp_add_new_customer">নতুন পাওনাদার-দেনাদার যোগ করুন</string>
    <string name="dp_add_customer">নতুন পাওনাদার-দেনাদার</string>
    <string name="dp_addcustomer_save_btn">যোগ করুন</string>
    <string name="dp_transactions_net_balance">নেট ব্যালেন্স</string>
    <string name="dp_kototakadilam">কত টাকা দিলাম?</string>
    <string name="dp_kototakapelam">কত টাকা পেলাম?</string>
    <string name="dp_biboron">বিবরণ</string>
    <string name="cp_Customer_DemoName">আলম ভাই</string>
    <string name="cp_Customer_DemoPhone">+8801717338996</string>
    <string name="cp_mot_pabo">মোট পাবো</string>
    <string name="cp_mot_debo">মোট দেবো</string>
    <string name="cp_porishod">পরিশোধ!!</string>
    <string name="cp_diyeci">দিয়েছি</string>
    <string name="cp_payeci">পেয়েছি</string>
    <string name="cp_dena">দেনা</string>
    <string name="cp_pawna">পাওনা</string>
    <string name="cp_add_diyeci">দিলাম</string>
    <string name="cp_add_payeci">পেলাম</string>
    <string name="cp_example_Phone">উদাহরণ: +88 01521xxxxxx</string>
    <string name="iw_addCus_Name">অনুগ্রহ করে নাম লিখুন</string>
    <string name="iw_addCus_Phone">ফোন নাম্বার লিখুন</string>
    <string name="iw_gave_amount">দেনার পরিমাণ লিখুন</string>
    <string name="iw_got_amount">পাওনার পরিমাণ লিখুন</string>
    <string name="iw_expence_catagory">ব্যয়ের ধরন লিখুন</string>
    <string name="iw_expence_amount">ব্যয়ের পরিমাণ লিখুন</string>
    <string name="iw_revenue_catagory">আয়ের ধরন লিখুন</string>
    <string name="iw_revenue_amount">আয়ের পরিমাণ লিখুন</string>
    <string name="songrokkhonkorun">সংরক্ষণ করুন</string>
    <string name="noterevenuet">আয়ের সংক্ষিপ্ত বিবরণ</string>
    <string name="noteexpenset">ব্যয়ের সংক্ষিপ্ত বিবরণ</string>
    <string name="revenueamount">আয়ের পরিমাণ</string>
    <string name="revenuecategory">আয়়ের ধরন</string>
    <string name="expenseamount">ব্যয়ের পরিমাণ</string>
    <string name="expensecategory">ব্যয়়ের ধরন</string>
    <string name="Expense"> যোগ করুন</string>
    <string name="Revenue"> যোগ করুন</string>
    <string name="transactions_revenue">আয়</string>
    <string name="transactions_expense">ব্যয়</string>
    <string name="transactions_net_balance">ব্যালেন্স</string>
    <string name="transactions_total">বিবরণ</string>
    <string name="jp_add_revenue">আয় যোগ করুন</string>
    <string name="jp_add_expense">ব্যয় যোগ করুন</string>
    <string name="rcRevenueSucces">আয় সফলভাবে যোগ হয়েছে!</string>
    <string name="rcExpenseSucces">ব্যয় সফলভাবে যোগ হয়েছে!</string>
    <string name="transactions_deposits">সঞ্চয়</string>
    <string name="transactions_withdrawal">উত্তোলন</string>
    <string name="transactions_Tdeposits">সঞ্চয়</string>
    <string name="transactions_Twithdrawal">উত্তোলন</string>
    <string name="transactions_TSavings">নেট সঞ্চয়</string>
    <string name="sv_add_deposit">সঞ্চয় যোগ করুন</string>
    <string name="sv_add_withdrawal">উত্তোলন যোগ করুন</string>
    <string name="depositcategory">সঞ্চয়ের ধরন</string>
    <string name="depositamount">সঞ্চয়ের পরিমাণ</string>
    <string name="withdrawalcategory">উত্তোলনের ধরন</string>
    <string name="withdrawalamount">উত্তোলনের পরিমাণ</string>
    <string name="notedeposit">সঞ্চয়ের সংক্ষিপ্ত বিবরণ</string>
    <string name="notewithdrawal">উত্তোলনের সংক্ষিপ্ত বিবরণ</string>
    <string name="iw_deposit_catagory">সঞ্চয়ের ধরন লিখুন</string>
    <string name="iw_deposit_amount">সঞ্চয়ের পরিমাণ লিখুন</string>
    <string name="iw_withdrawal_catagory">উত্তোলনের ধরন লিখুন</string>
    <string name="iw_withdrawal_amount">উত্তোলনের পরিমাণ লিখুন</string>
    <string name="iw_withdrawal_amount_Limit"> উত্তোলনযোগ্য ব্যালেন্স:\u0020 </string>
    <string name="iw_withdrawal_amount_Limit_toast">আপনার পর্যাপ্ত ব্যালেন্স নেই!\n উত্তোলনযোগ্য ব্যালেন্স:\u0020 </string>
    <string name="depositSucces">সঞ্চয় সফলভাবে যোগ হয়েছে!</string>
    <string name="withdrawalSucces">উত্তোলন সফলভাবে যোগ হয়েছে!</string>
    <string name="memoRosidcategory">বিবরণ</string>
    <string name="iw_memoRosid_catagory">বিবরণ লিখুন</string>
    <string name="memoSucces">মেমো-রশিদ সফলভাবে যোগ হয়েছে!</string>
    <string name="to_customer_page"> কে </string>
    <string name="from_customer_page"> হতে </string>
    <string name="_0"> 0 </string>
    <string name="you_gave_customer_page_heading">দিয়েছেন </string>
    <string name="you_got_customer_page_heading">পেয়েছেন </string>
    <string name="pp__address">ঠিকানা</string>
    <string name="pp__email">ই-মেইল</string>
    <string name="pp__update_profile">প্রোফাইল হালনাগাদ</string>
    <string name="pp__profile">প্রোফাইল</string>
    <string name="RCdelete">\u0020 মুছে ফেলুন</string>
    <string name="dateformat">mm-dd-yy</string>
    <string name="todo">TODO</string>
    <string name="rcupdate">\u0020 হালনাগাদ করুন</string>
    <string name="alertBuilderUpdate">আপনি কি তথ্য হালনাগাদ করতে চান?</string>
    <string name="alertBuilderAppClose">আপনি কি এপ্লিকেশন বন্ধ করতে চান?</string>
    <string name="alertBuilderDelete">আপনি কি তথ্য মুছে ফেলতে চান?</string>
    <string name="alertBuilderDeleteCustomer">আপনি কি পাওনাদার/দেনাদার মুছে ফেলতে চান?</string>
    <string name="alertBuilderYes">হ্যাঁ</string>
    <string name="alertBuilderNo">না</string>
    <string name="alertBuilderYesUpdateConfirmation">সফলভাবে তথ্য হালনাগাদ হয়েছে!</string>
    <string name="alertBuilderYesDeleteConfirmation">সফলভাবে তথ্য মুছে ফেলা হয়েছে!</string>
    <string name="alertBuilderYesDeleteCustConf">সফলভাবে পাওনাদার/দেনাদার মুছে ফেলা হয়েছে!</string>
    <string name="alertBuilderYesAppCloseConfirmation">এপ্লিকেশনটি সফলভাবে বন্ধ করা হয়েছে!</string>
    <string name="cpgiveSucces">দেওয়া সফলভাবে যোগ হয়েছে!</string>
    <string name="cpgotSucces">পাওয়া সফলভাবে যোগ হয়েছে!</string>
    <string name="cpAddnewCusSucces">পাওনাদার/দেনাদার সফলভাবে যোগ হয়েছে!</string>
    <string name="copycright_amarhisab_com_bd_2021">copycright @amarhisab.com.bd 2021</string>
    <string name="nav_settings">সেটিংস</string>
    <string name="nav_about_us">আমাদের সম্পর্কে</string>
    <string name="nav_logout">লগ আউট করুন</string>
    <string name="nav_Home">হোম</string>
    <string name="nav_settings_string">Setting Under Construction</string>
    <string name="memoRosidcategorydt">বিবরণ :</string>
    <string name="tarikh">তারিখ :</string>
    <string name="aikordetails">বিস্তারিত আয়কর</string>
    <string name="aikornirdesika">আয়কর নির্দেশিকা </string>
    <string name="aikorporipotro">আয়কর পরিপত্র  </string>
    <string name="aikordate0">২০১৯-২০২০</string>
    <string name="aikordate">২০২০-২০২১</string>
    <string name="other">অন্যান্য </string>
    <string name="shownirdesika">নির্দেশিকা দেখুন </string>
    <string name="showporipotro">পরিপত্র দেখুন </string>
    <string name="url">https://nbr.gov.bd/uploads/publications/combinepdf_compressed.pdf</string>
    <string name="aikor_type">Aikor Type</string>
    <string name="aikor_defination">আয়কর হচ্ছে ব্যক্তি বা সত্ত্বার আয় বা লভ্যাংশরে উপর প্রদেয় কর ।
        আয়কর অধ্যাদেশ ১৯৮৪ এর আওতায় কর বলতে অধ্যাদেশ অনুযায়ী প্রদেয় আয়কর, অতিরিক্ত কর, বাড়তি লাভের কর, এতদসংক্রান্ত জরিমানা,
        সুদ বা আদায় যোগ্য অর্থকে বুঝায়। অন্য ভাবে বলা যায় যে, কর হচ্ছে রাষ্ট্রের সকল
        জনসাধারনের স্বার্থে রাষ্ট্রের ব্যয় নির্বাহের জন্য সরকারকে প্রদত্ত বাধ্যতামূলক অর্থ।</string>
    <string name="aikor_person">
        সাধারণভাবে কোন ব্যক্তি করদাতার ( individual ) আয় যদি বছরে ৩,৫০,০০০ টাকার বেশি হয় তবে তাকে রিটার্ন দাখিল করতে হবে ।
        \n\n
        মহিলা এবং ৬৫ বছর বা তদূর্ধ্ব বয়সের করদাতার আয় যদি বছরে ৩,৫০,০০০ টাকার বেশি প্রতিবন্ধী করদাতার আয় যদি বছরে ৪,৫০,০০০ টাকার বেশি
        এবং গেজেটভুক্ত যুদ্ধাহত মুক্তিযােদ্ধা করদাতার আয় যদি বছরে ৪,৭৫,০০০ টাকার বেশি হয় তাহলে ঐ করদাতাকে আয়কর রিটার্ন দাখিল করতে হবে । \n
        আবার কয়েকটি ক্ষেত্রে , আয়ের পরিমাণ যা - ই হোক না কেন , করদাতাকে আয়কর রিটার্ন দাখিল করতে হবে ।
    </string>
    <string name="aikor_progoti">
        আয়কর হচ্ছে ব্যক্তি বা সত্ত্বার উপর সরকার কর্তৃক আরোপিত কর, যা আয় বা লভ্যাংশের পরিমান ভেদে পরিবর্তিত হয়।
        প্রগতিশীল কর হচ্ছে সেই কর ব্যবস্থা যাতে করদাতার আয় বৃদ্ধির সঙ্গে সঙ্গে করহার বৃদ্ধি হয়।
        আয়কর আরোপিত হয় করদাতার কর পরিশোধ করার ক্ষমতার উপর। তাই আয়করকে প্রগতিশীল কর বলা হয়।
    </string>
    <string name="aikor_khat">
        আয়কর অধ্যাদশে ১৯৮৪ অনুযায়ী আয়ের খাত সমূহ নম্নিরূপ:\n\n
        ১.	বেতনাদি\n
        ২.	নিরাপত্তা জামানতের উপর সুদ\n
        ৩.	গৃহ সম্পত্তির আয়\n
        ৪.	কৃষি আয়\n
        ৫.	ব্যবসা বা পেশার আয়\n
        ৬.	মূলধনী মুনাফা\n
        ৭.	ফার্মের আয়ের অংশ\n
        ৮.	স্বামী / স্ত্রী বা অপ্রাপ্ত বয়স্ক সন্তানের আয় \n
        ৯.	অন্যান্য উৎস হতে আয়। তবে রিটার্ন জমা দেয়ার সময় নিম্নলিখিত আয়ের খাতগুলি সম্পৃক্ত হবে।
    </string>
</resources>