<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AykorActivity">


    <RelativeLayout
        android:id="@+id/firstlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.Toolbar

            android:id="@+id/viewReportPageToolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/toolbar"
            android:elevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/toolbar"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backBtnaikor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="0dp"
                    android:background="@drawable/arrow_back_icon"
                    android:elevation="4dp"
                    android:minWidth="32dp"
                    android:minHeight="32dp"
                    android:padding="10dp" />

                <TextView
                    android:id="@+id/viewReportHeading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="17dp"
                    android:layout_weight="1"
                    android:paddingStart="10dp"
                    android:text="@string/aykorCT"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="normal" />


            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/secondlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/firstlayout"
        android:layout_margin="10dp"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/aikornirdesikalayoutId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_aikor_bg"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_aikor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aikornirdesika"
                android:textColor="#0E0101"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/aikordate0"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/aikorporidorsokId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_aikor_bg"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_aikor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/aikorporipotro"
                android:textColor="#0E0101"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/aikordate"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/aikornirdesikalayoutId"
            android:layout_marginTop="9dp">


            <TextView
                android:id="@+id/aikornirdesikaviewId"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/aikor_bg_style"
                android:gravity="center"
                android:text="@string/shownirdesika"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aikorporipotroviewdId"
                android:layout_width="130dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="12dp"
                android:background="@drawable/aikor_bg_style"
                android:gravity="center"
                android:text="@string/showporipotro"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/secondlayout"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_aikor_bg_first"
        android:gravity="center_horizontal">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/aikorrecyclerId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            tools:listitem="@layout/aikorsingleitem">


        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>


</RelativeLayout>